assets/css/main.css
@media screen and (max-width: 768px) {
  .connect dl {
    align-items: flex-start;
    flex-direction: column;
  }
}

/* Styling */
.cnt-lnk svg {
  transition: fill var(--duration) ease;
}

.cnt-lnk:hover svg {
  fill: var(--accent);
}

.content a,
.ext {
  text-decoration: underline;
}

.ext {
  text-decoration-color: var(--accent) !important;
}

.fn-link {
  font-family: monospace;
  font-size: 1.5rem;
  font-weight: 900;
  line-height: 1rem;
  padding: 0 0.25rem;
}

.fn-cont {
  background-color: var(--meta);
  border-radius: 50%;
  height: 1rem;
}

.fn-cont:hover {
  background-color: var(--accent);
}

.fn {
  color: var(--background);
  font-size: 0.65rem;
  text-align: center;
}

.fn:hover,
.fn:visited {
  color: var(--background) !important;
}

.footnotes {
  border-top: 1px solid var(--meta);
}

.headshot {
  transition: border-radius var(--duration) ease;
}

.home:hover .headshot,
.home:hover .headshot img {
  transition-delay: 0;
}

.headshot {
  background-color: var(--accent);
  border-radius: 57% 43% 57% 43%/48% 36% 64% 52%;
  height: 70px;
  width: 70px;
}

.home:hover .headshot {
  border-radius: 43% 57% 43% 57%/36% 64% 36% 64%;
}

/* Layout */
body {
  grid-template-columns: minmax(2rem,1fr) minmax(288px,1200px) minmax(2rem,1fr);
  grid-template-rows: repeat(3, auto);
}

header,
main,
footer {
  grid-column: 2/3;
}

header {
  grid-row: 1/2;
}

main {
  grid-row: 2/3;
}

footer {
  grid-row: 3/4;
}

nav {
  max-height: 3.5rem;
  max-width: 14rem;
}

.footer-copy {
  max-width: 16rem;
}

